--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 			<section class="guides">
 				<div class="guides__container">
 					<div class="gear__subtitle">Buyer's guides</div>
-					<div class="about__title">Navigating our offering.</di>
+					<div class="about__title">Navigating our offering.</div>
 						<p class="guides__text about__text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.
 							Vestibulum sit
 							amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
